--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b50bfd; }
+  background: #37d5ec; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9c8b68; }
+  background: #4f9822; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #626231; }
+  background: #9be670; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #13b1b7; }
+  background: #1924e0; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #92b6ec; }
+  background: #e5ac9f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d8420f; }
+  background: #bcc488; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #739f20; }
+  background: #98290e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #96bd34; }
+  background: #76dca5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #6e2e60; }
+  background: #68fa6c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #50743f; }
+  background: #fc5d0e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #e27746; }
+  background: #01df58; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b74ed5; }
+  background: #068f21; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a60b14; }
+  background: #19cf41; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #23679b; }
+  background: #c1960b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d0a168; }
+  background: #4dd5c6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #307a85; }
+  background: #f5bdd0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #cd5fd8; }
+  background: #1453d8; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2c94d3; }
+  background: #7b20ae; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #99bda2; }
+  background: #c3fb2b; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #a6ac2c; }
+  background: #b20836; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a175e4; }
+  background: #7bc967; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #352e0c; }
+  background: #c0feb0; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #874274; }
+  background: #e31066; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #ee1a16; }
+  background: #e8919c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #43d8fd; }
+  background: #630339; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #6ed583; }
+  background: #fa0b1a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3eac5a; }
+  background: #6ebf65; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b3a12e; }
+  background: #550f26; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f84773; }
+  background: #c49090; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #427f41; }
+  background: #a75732; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4d0662; }
+  background: #ef0a72; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #b5d92f; }
+  background: #f8c5b5; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #6b9836; }
+  background: #414715; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #024f7f; }
+  background: #ecf43d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #763a20; }
+  background: #8aa48a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #5eba43; }
+  background: #3eb34d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #fabc59; }
+  background: #6e3228; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b13440; }
+  background: #40ed9e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0f5259; }
+  background: #9a8eab; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e0b642; }
+  background: #07ef49; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #28d4f7; }
+  background: #ce3812; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0bf0f9; }
+  background: #bb4c5f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e62ad0; }
+  background: #cbee61; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #6be2eb; }
+  background: #ce4fa5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #4f5c28; }
+  background: #8f95a9; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e12a58; }
+  background: #427e21; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f80136; }
+  background: #1a6db1; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f8c34a; }
+  background: #813f0b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #5b3eac; }
+  background: #e72829; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0f6255; }
+  background: #2a48aa; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #aad0f3; }
+  background: #4331db; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d1b869; }
+  background: #ea9588; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #92ee83; }
+  background: #e0dd03; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d9d0b3; }
+  background: #c15e62; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #94784b; }
+  background: #49dad8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #189d6f; }
+  background: #0666c8; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c0326e; }
+  background: #5a84f8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #2ae5de; }
+  background: #e5aac8; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a7908a; }
+  background: #1a0786; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d33147; }
+  background: #ff7074; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #dee689; }
+  background: #9002e2; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #9a5f05; }
+  background: #2ff179; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #13bdfc; }
+  background: #08798e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #58bb95; }
+  background: #f673c5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f8d626; }
+  background: #b66bde; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #45305d; }
+  background: #043cf0; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1c8a24; }
+  background: #8dcf4a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d3034e; }
+  background: #d2fa83; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #9835b8; }
+  background: #da442a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #21b5ab; }
+  background: #cb4a24; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #41cc91; }
+  background: #893b40; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c98622; }
+  background: #36d890; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #41863e; }
+  background: #6c0105; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #0e0dc0; }
+  background: #c75f84; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a23174; }
+  background: #80c640; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #c95e82; }
+  background: #34510d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2ba762; }
+  background: #30436e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bff010; }
+  background: #b8b5bb; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f2033c; }
+  background: #fb5afd; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #de311e; }
+  background: #10cfd3; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #2232ea; }
+  background: #f657da; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4bd042; }
+  background: #56dd59; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #dc5124; }
+  background: #ca1208; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #324aec; }
+  background: #fc6077; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #9075b6; }
+  background: #bccfbd; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e8cf3d; }
+  background: #c848ac; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f7e972; }
+  background: #43860c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #848ed9; }
+  background: #467c91; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #fa1f36; }
+  background: #0fdd04; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #519781; }
+  background: #ce902a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0a2567; }
+  background: #7761e3; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #671ab2; }
+  background: #e8853c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #79342e; }
+  background: #cb4a54; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b8fd2e; }
+  background: #dcc044; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #bed1e7; }
+  background: #6366f6; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4c70fd; }
+  background: #8dde47; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #aef662; }
+  background: #9fe224; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #20f6a9; }
+  background: #4805d5; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #8b4187; }
+  background: #15808b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #436826; }
+  background: #bf1d5e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12235,64 +12235,28 @@ td .check-container {
 .add-user-modal input[type="password"] {
   padding: 9px 16px; }
 
-.toggle-switch-btn {
-  position: relative;
-  display: inline-block;
+.add-user-toggle-btn .switch-btn {
   width: 90px;
-  height: 34px;
-  /* Rounded sliders */ }
-  .toggle-switch-btn input {
-    display: none; }
-  .toggle-switch-btn .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #776fff;
-    -webkit-transition: .4s;
-    transition: .4s;
-    /*------ ADDED CSS ---------*/ }
-    .toggle-switch-btn .slider .on-active {
-      display: none; }
-    .toggle-switch-btn .slider .on-active,
-    .toggle-switch-btn .slider .off-inactive {
-      color: white;
-      position: absolute;
-      transform: translate(-50%, -50%);
-      top: 50%;
-      left: 50%;
-      font-size: 10px;
-      font-family: Verdana, sans-serif; }
-    .toggle-switch-btn .slider input:checked + .slider .on-active {
-      display: block; }
-    .toggle-switch-btn .slider input:checked + .slider .off-inactive {
-      display: none; }
-  .toggle-switch-btn .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s; }
-  .toggle-switch-btn input:checked + .slider {
-    background-color: #776fff; }
-  .toggle-switch-btn input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3; }
-  .toggle-switch-btn input:checked + .slider:before {
-    -webkit-transform: translateX(55px);
-    -ms-transform: translateX(55px);
-    transform: translateX(55px); }
-  .toggle-switch-btn .slider.round {
-    border-radius: 34px; }
-  .toggle-switch-btn .slider.round:before {
-    border-radius: 50%; }
+  float: right; }
+.add-user-toggle-btn .on,
+.add-user-toggle-btn .off {
+  color: white;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 44%;
+  font-size: 14px;
+  font-family: Verdana, sans-serif; }
+.add-user-toggle-btn input:checked + .sliderss .on {
+  display: block;
+  font-size: 14px;
+  padding-left: 10px;
+  left: 10%; }
+.add-user-toggle-btn input:checked + .sliderss::before {
+  -webkit-transform: translateX(57px);
+  -ms-transform: translateX(57px);
+  transform: translateX(57px); }
 
-/*--------- END --------*/
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
