--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1810,86 +1810,36 @@ td {
 }
 
 // toggle btn css active and inactive
-.toggle-switch-btn {
-  position: relative;
-  display: inline-block;
-  width: 90px;
-  height: 34px;
 
-  input {
-    display: none;
+
+.add-user-toggle-btn {
+  .switch-btn {
+    width: 90px;
+    float: right;
   }
 
-  .slider {
+  .on,
+  .off {
+    color: white;
     position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #776fff;
-    -webkit-transition: .4s;
-    transition: .4s;
-
-    /*------ ADDED CSS ---------*/
-    .on-active {
-      display: none;
-    }
-
-    .on-active,
-    .off-inactive {
-      color: white;
-      position: absolute;
-      transform: translate(-50%, -50%);
-      top: 50%;
-      left: 50%;
-      font-size: 10px;
-      font-family: Verdana, sans-serif;
-    }
-
-    input:checked+.slider .on-active {
-      display: block;
-    }
-
-    input:checked+.slider .off-inactive {
-      display: none;
-    }
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 44%;
+    font-size: 14px;
+    font-family: Verdana, sans-serif;
   }
 
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
+  input:checked+.sliderss .on {
+    display: block;
+    font-size: 14px;
+    padding-left: 10px;
+    left: 10%;
   }
 
-  input:checked+.slider {
-    background-color: #776fff;
+  input:checked+.sliderss::before {
+    -webkit-transform: translateX(57px);
+    -ms-transform: translateX(57px);
+    transform: translateX(57px);
   }
 
-  input:focus+.slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-
-  input:checked+.slider:before {
-    -webkit-transform: translateX(55px);
-    -ms-transform: translateX(55px);
-    transform: translateX(55px);
-  }
-
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-
-  .slider.round:before {
-    border-radius: 50%;
-  }
 }
-
-/*--------- END --------*/
