--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #37d5ec; }
+  background: #70ae13; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #4f9822; }
+  background: #4a5433; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9be670; }
+  background: #d891d3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #1924e0; }
+  background: #f6b580; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e5ac9f; }
+  background: #3e889e; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #bcc488; }
+  background: #2de38f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #98290e; }
+  background: #058559; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #76dca5; }
+  background: #5e3b99; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #68fa6c; }
+  background: #90e19d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #fc5d0e; }
+  background: #c0a3da; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #01df58; }
+  background: #13b253; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #068f21; }
+  background: #0d526f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #19cf41; }
+  background: #6f489d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #c1960b; }
+  background: #d9610e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #4dd5c6; }
+  background: #1545d5; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f5bdd0; }
+  background: #f3c799; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1453d8; }
+  background: #e4ea34; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #7b20ae; }
+  background: #ab765c; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #c3fb2b; }
+  background: #72467d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b20836; }
+  background: #edd218; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #7bc967; }
+  background: #e97eda; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #c0feb0; }
+  background: #ff85cc; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e31066; }
+  background: #628080; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e8919c; }
+  background: #156739; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #630339; }
+  background: #420a03; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #fa0b1a; }
+  background: #de4ddd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #6ebf65; }
+  background: #f9ea4e; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #550f26; }
+  background: #64b185; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #c49090; }
+  background: #69e2a0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a75732; }
+  background: #fd2d64; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ef0a72; }
+  background: #16baea; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #f8c5b5; }
+  background: #92bc22; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #414715; }
+  background: #19cea8; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ecf43d; }
+  background: #c8c8e5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8aa48a; }
+  background: #1016b2; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #3eb34d; }
+  background: #952f60; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #6e3228; }
+  background: #95b635; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #40ed9e; }
+  background: #961e04; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9a8eab; }
+  background: #8ccaf4; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #07ef49; }
+  background: #2cd851; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ce3812; }
+  background: #97136a; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #bb4c5f; }
+  background: #3a5dcd; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #cbee61; }
+  background: #76ae9c; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #ce4fa5; }
+  background: #303bc7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8f95a9; }
+  background: #03deb4; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #427e21; }
+  background: #e88de7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #1a6db1; }
+  background: #1855ec; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #813f0b; }
+  background: #d492c1; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e72829; }
+  background: #cddb94; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2a48aa; }
+  background: #089b0a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #4331db; }
+  background: #6419d7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #ea9588; }
+  background: #021826; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e0dd03; }
+  background: #06c6c7; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #c15e62; }
+  background: #13e019; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #49dad8; }
+  background: #71695f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #0666c8; }
+  background: #31ebf6; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5a84f8; }
+  background: #0f8a82; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e5aac8; }
+  background: #fa138b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #1a0786; }
+  background: #4432c5; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ff7074; }
+  background: #46a98f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9002e2; }
+  background: #a45f6b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2ff179; }
+  background: #ae9332; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #08798e; }
+  background: #699616; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f673c5; }
+  background: #bfa394; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b66bde; }
+  background: #60df65; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #043cf0; }
+  background: #a00380; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8dcf4a; }
+  background: #0b5273; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d2fa83; }
+  background: #02b5fd; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #da442a; }
+  background: #6c4da5; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #cb4a24; }
+  background: #cd67c9; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #893b40; }
+  background: #801bb3; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #36d890; }
+  background: #f6e54b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6c0105; }
+  background: #36ee05; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c75f84; }
+  background: #ff6ae0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #80c640; }
+  background: #a0123c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #34510d; }
+  background: #fbda9e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #30436e; }
+  background: #f79390; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b8b5bb; }
+  background: #f0a364; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #fb5afd; }
+  background: #2c4a57; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #10cfd3; }
+  background: #95e693; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f657da; }
+  background: #3381d6; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #56dd59; }
+  background: #300821; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ca1208; }
+  background: #f59d25; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #fc6077; }
+  background: #dcb64a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #bccfbd; }
+  background: #853f24; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c848ac; }
+  background: #ec36b7; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #43860c; }
+  background: #a4e3bb; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #467c91; }
+  background: #d773d3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #0fdd04; }
+  background: #61bc53; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ce902a; }
+  background: #aa4627; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7761e3; }
+  background: #d24bbe; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #e8853c; }
+  background: #8c96fd; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #cb4a54; }
+  background: #313ea5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #dcc044; }
+  background: #25ded5; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6366f6; }
+  background: #0d2586; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8dde47; }
+  background: #537f4b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #9fe224; }
+  background: #a17ef8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4805d5; }
+  background: #b1c289; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #15808b; }
+  background: #3b04dd; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #bf1d5e; }
+  background: #9b9b2b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11949,7 +11949,7 @@ input:checked + .sliders:before {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #776fff;
+  background-color: #bababa;
   -webkit-transition: 0.4s;
   transition: 0.4s; }
 
