--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -1418,7 +1418,7 @@ input:checked+.sliders:before {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #776fff;
+  background-color: #bababa;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
