--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #70ae13; }
+  background: #f96aea; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #4a5433; }
+  background: #6fb8bd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #d891d3; }
+  background: #91b9da; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f6b580; }
+  background: #8a91ba; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #3e889e; }
+  background: #fa584d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2de38f; }
+  background: #3c5a47; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #058559; }
+  background: #deefc4; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5e3b99; }
+  background: #70811d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #90e19d; }
+  background: #487536; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #c0a3da; }
+  background: #4cf468; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #13b253; }
+  background: #ae7b2f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0d526f; }
+  background: #02db0f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #6f489d; }
+  background: #4971f9; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d9610e; }
+  background: #33e043; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1545d5; }
+  background: #c4697c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f3c799; }
+  background: #d0d0cb; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e4ea34; }
+  background: #5898f6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ab765c; }
+  background: #d8759b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #72467d; }
+  background: #ffdc5a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #edd218; }
+  background: #1946bd; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e97eda; }
+  background: #b2bcf4; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ff85cc; }
+  background: #ae8cf9; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #628080; }
+  background: #72e513; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #156739; }
+  background: #cc6cd0; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #420a03; }
+  background: #bf12f9; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #de4ddd; }
+  background: #1d4b62; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f9ea4e; }
+  background: #6cdf3b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #64b185; }
+  background: #0bd592; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #69e2a0; }
+  background: #bb4c97; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #fd2d64; }
+  background: #473c9f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #16baea; }
+  background: #24096f; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #92bc22; }
+  background: #8d77da; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #19cea8; }
+  background: #03a8da; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #c8c8e5; }
+  background: #c5b8f3; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1016b2; }
+  background: #f61427; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #952f60; }
+  background: #cbc37b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #95b635; }
+  background: #727aa4; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #961e04; }
+  background: #72d58a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8ccaf4; }
+  background: #1530a0; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2cd851; }
+  background: #d7b31c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #97136a; }
+  background: #cda076; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #3a5dcd; }
+  background: #80d37e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #76ae9c; }
+  background: #690f3f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #303bc7; }
+  background: #3597fd; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #03deb4; }
+  background: #7494fd; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e88de7; }
+  background: #0d574d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #1855ec; }
+  background: #52b5e4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d492c1; }
+  background: #7f3512; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #cddb94; }
+  background: #f76b83; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #089b0a; }
+  background: #da4da3; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #6419d7; }
+  background: #526df7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #021826; }
+  background: #e2e39f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #06c6c7; }
+  background: #1e173c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #13e019; }
+  background: #8870cf; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #71695f; }
+  background: #d60839; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #31ebf6; }
+  background: #e1fc32; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #0f8a82; }
+  background: #f03dc2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #fa138b; }
+  background: #4498cb; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4432c5; }
+  background: #ea3a5d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #46a98f; }
+  background: #38d95e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a45f6b; }
+  background: #5c365b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ae9332; }
+  background: #dda8fa; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #699616; }
+  background: #fa15d4; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #bfa394; }
+  background: #7fac6d; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #60df65; }
+  background: #28f420; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a00380; }
+  background: #a261d5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #0b5273; }
+  background: #5a0aca; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #02b5fd; }
+  background: #7278b2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6c4da5; }
+  background: #b15e29; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #cd67c9; }
+  background: #68548d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #801bb3; }
+  background: #d3e004; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f6e54b; }
+  background: #62b20d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #36ee05; }
+  background: #3947a0; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ff6ae0; }
+  background: #29e8e9; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a0123c; }
+  background: #54d25b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #fbda9e; }
+  background: #243d68; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f79390; }
+  background: #f7ba0b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f0a364; }
+  background: #2f4106; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2c4a57; }
+  background: #7bee67; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #95e693; }
+  background: #54712d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3381d6; }
+  background: #d9904c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #300821; }
+  background: #d9f228; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f59d25; }
+  background: #51656f; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #dcb64a; }
+  background: #c5b2fd; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #853f24; }
+  background: #73ccc3; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ec36b7; }
+  background: #7c3c7b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a4e3bb; }
+  background: #b73e36; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d773d3; }
+  background: #297e3b; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #61bc53; }
+  background: #3af77a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #aa4627; }
+  background: #496eab; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d24bbe; }
+  background: #b189bb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8c96fd; }
+  background: #0c92f0; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #313ea5; }
+  background: #7763f2; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #25ded5; }
+  background: #27d7dd; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0d2586; }
+  background: #d11281; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #537f4b; }
+  background: #dbcb11; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a17ef8; }
+  background: #2e1f8d; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b1c289; }
+  background: #9d1aad; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #3b04dd; }
+  background: #b74c0c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9b9b2b; }
+  background: #657f9f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
