connectors page changes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f96aea; }
+  background: #f29a0f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6fb8bd; }
+  background: #539fc8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #91b9da; }
+  background: #59a31f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8a91ba; }
+  background: #058bff; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #fa584d; }
+  background: #d64061; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3c5a47; }
+  background: #f6eb3e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #deefc4; }
+  background: #c22bb9; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #70811d; }
+  background: #caef8e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #487536; }
+  background: #fd86f2; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #4cf468; }
+  background: #52ab21; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ae7b2f; }
+  background: #9e84a2; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #02db0f; }
+  background: #4f3f10; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #4971f9; }
+  background: #7d4a96; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #33e043; }
+  background: #ad5c20; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c4697c; }
+  background: #a73a30; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d0d0cb; }
+  background: #8d0e13; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5898f6; }
+  background: #690d88; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d8759b; }
+  background: #5aa1e7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ffdc5a; }
+  background: #a9c72d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1946bd; }
+  background: #e8829b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b2bcf4; }
+  background: #60aa6d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ae8cf9; }
+  background: #618fe0; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #72e513; }
+  background: #a5207d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #cc6cd0; }
+  background: #107d86; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #bf12f9; }
+  background: #9a3d2e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1d4b62; }
+  background: #3a8a93; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #6cdf3b; }
+  background: #96fdd6; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #0bd592; }
+  background: #01e1b6; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #bb4c97; }
+  background: #721641; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #473c9f; }
+  background: #4a6678; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #24096f; }
+  background: #04a9c0; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #8d77da; }
+  background: #34812d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #03a8da; }
+  background: #bbee2a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #c5b8f3; }
+  background: #5060a4; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f61427; }
+  background: #58a445; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #cbc37b; }
+  background: #9f64bc; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #727aa4; }
+  background: #e87d2d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #72d58a; }
+  background: #faad8b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #1530a0; }
+  background: #dd7dcf; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d7b31c; }
+  background: #1da56e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #cda076; }
+  background: #8f5713; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #80d37e; }
+  background: #a0753a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #690f3f; }
+  background: #035980; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3597fd; }
+  background: #066a3b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7494fd; }
+  background: #1459c1; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #0d574d; }
+  background: #9fa655; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #52b5e4; }
+  background: #ca0c30; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #7f3512; }
+  background: #d345e7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f76b83; }
+  background: #365ea3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #da4da3; }
+  background: #669cc4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #526df7; }
+  background: #824e77; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #e2e39f; }
+  background: #eff91f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #1e173c; }
+  background: #78a6c0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8870cf; }
+  background: #4ee993; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d60839; }
+  background: #ec804d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e1fc32; }
+  background: #a62c41; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f03dc2; }
+  background: #68f26e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #4498cb; }
+  background: #06ca64; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ea3a5d; }
+  background: #d68e2b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #38d95e; }
+  background: #99ebec; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5c365b; }
+  background: #cb03a2; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #dda8fa; }
+  background: #df73a6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fa15d4; }
+  background: #53feb0; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7fac6d; }
+  background: #370f53; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #28f420; }
+  background: #b25cde; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a261d5; }
+  background: #ac3707; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5a0aca; }
+  background: #bbc128; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #7278b2; }
+  background: #48a4d2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b15e29; }
+  background: #40ab6e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #68548d; }
+  background: #f4e6ee; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d3e004; }
+  background: #de233d; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #62b20d; }
+  background: #c44590; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3947a0; }
+  background: #59d1f9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #29e8e9; }
+  background: #f40176; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #54d25b; }
+  background: #e10466; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #243d68; }
+  background: #9c8bb5; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f7ba0b; }
+  background: #e3d4c6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #2f4106; }
+  background: #cc9561; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7bee67; }
+  background: #39cdfa; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #54712d; }
+  background: #c465cc; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d9904c; }
+  background: #a9ed09; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d9f228; }
+  background: #07c6fb; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #51656f; }
+  background: #3d6a6a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c5b2fd; }
+  background: #f22d25; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #73ccc3; }
+  background: #94ef87; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #7c3c7b; }
+  background: #82fda1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b73e36; }
+  background: #30781f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #297e3b; }
+  background: #ca0eaa; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3af77a; }
+  background: #bfb922; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #496eab; }
+  background: #240b4c; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b189bb; }
+  background: #555459; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #0c92f0; }
+  background: #933a62; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7763f2; }
+  background: #54de62; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #27d7dd; }
+  background: #7827f4; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d11281; }
+  background: #d41165; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #dbcb11; }
+  background: #e73cdf; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2e1f8d; }
+  background: #552149; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9d1aad; }
+  background: #921401; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b74c0c; }
+  background: #f2afee; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #657f9f; }
+  background: #e6dc2f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11330,7 +11330,7 @@ input[type="submit"] {
 .toggle-btn-div {
   display: flex;
   align-items: center;
-  flex-basis: 250px; }
+  flex-basis: 260px; }
 
 .toggle-btn-div .toggle-btn {
   margin-right: 10px; }
@@ -11338,8 +11338,8 @@ input[type="submit"] {
 .switch {
   position: relative;
   display: inline-block;
-  width: 45px;
-  height: 25px;
+  width: 60px;
+  height: 31px;
   margin-top: 8px; }
 
 .switch input {
@@ -11361,8 +11361,8 @@ input[type="submit"] {
 .sliders:before {
   position: absolute;
   content: "";
-  height: 16px;
-  width: 16px;
+  height: 23px;
+  width: 24px;
   left: 4px;
   bottom: 4px;
   background-color: white;
